--- a/Project1/Project1.Data/Project1.Data.csproj
+++ b/Project1/Project1.Data/Project1.Data.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project1.Domain\Project1.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
