included some library testing

--- a/Project1/Project1.UnitTests/Project1.UnitTests.csproj
+++ b/Project1/Project1.UnitTests/Project1.UnitTests.csproj
@@ -20,4 +20,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project1.Data\Project1.Data.csproj" />
+    <ProjectReference Include="..\Project1.Domain\Project1.Domain.csproj" />
+    <ProjectReference Include="..\Project1.WebApp\Project1.WebApp.csproj" />
+  </ItemGroup>
+
 </Project>
